--- a/scss/components/_home.scss
+++ b/scss/components/_home.scss
@@ -19,6 +19,7 @@ $spacer: 1rem;
         width: 100%;
         overflow: visible;
         position: relative;
+        top: 0;
 
         .slide-info-wrapper {
             position: absolute;
@@ -105,6 +106,7 @@ $spacer: 1rem;
             transform: translateX(-50%);
             width: 100%;
             min-height: 35vh;
+            object-fit: top;
 
             @include media-breakpoint-only(xs) {
                 height: 100%;
@@ -308,6 +310,7 @@ $spacer: 1rem;
             min-height: 100%;
 
             .watch-online__swiper-slide-backdrop {
+                top: 0;
                 min-height: 100%;
                 width: 100%;
                 object-fit: cover;
